--- a/voice/pom.xml
+++ b/voice/pom.xml
@@ -117,6 +117,13 @@
             <version>4.3.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
